# Carbonly

./: .gitignore  README.md  package-lock.json  render.yaml
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render_start.sh  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_onboarding_state.py  003_add_audit_idempotency_report_soft_delete.py  004_auth_tokens_and_user_flags.py  005_add_billing_fields_to_companies.py  005a_widen_alembic_version.py  006_update_billing_defaults_and_indexes.py  007_add_subscription_status_to_companies.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/api/: auth.py  billing.py  company.py  dashboard.py  insights.py  integrations.py  methodology.py  onboarding.py  reports.py
backend/app/core/: config.py
backend/app/models/: __init__.py  activity_record.py  audit_log.py  base.py  company.py  data_source_connection.py  email_verification_token.py  emission_estimate.py  emission_factor.py  emissions_summary.py  idempotency_key.py  password_reset_token.py  report.py  user.py
backend/app/schemas/: auth.py  company.py  dashboard.py  insights.py  integrations.py  methodology.py  onboarding.py  reports.py
backend/app/services/: __init__.py  audit.py  csv_parser.py  demo_seed.py  email.py  emissions.py  idempotency.py  integration_service.py  pdf_report.py  report_service.py
backend/scripts/: seed_dev.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_auth_flows.py
(+59 files in other folders)
